[project]
name = "pynx"
version = "0.1.0"
description = "A python library for getting orientation data from Nx Tracker 2 via bluetooth."
readme = "README.md"
authors = [
    { name = "kureta", email = "skureta@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.1.1",
    "python-osc>=1.9.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
