[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "opennx"
description = "A python library for getting orientation data from Nx Tracker 2 via bluetooth."
readme = "README.md"
authors = [
  { name = "kureta", email = "skureta@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dynamic = [ "version" ]
dependencies = [
  "bleak>=1.1.1,<1.2",
  "python-osc>=1.9.3,<1.10",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
cache-keys = [ { file = "pyproject.toml" }, { git = { commit = true, tags = true } } ]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
